swagger quickly
